<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/theme_menu"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/theme"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/theme_light"
                android:title="@string/light_mode"
                app:showAsAction="never" />
            <item
                android:id="@+id/theme_dark"
                android:title="@string/dark_mode"
                app:showAsAction="never" />
            <item
                android:id="@+id/theme_system"
                android:title="@string/system_default"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
