<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/main_menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/converter_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amount_input_layout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:text="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/from_currency_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_background"
                    android:padding="12dp"
                    app:layout_constraintTop_toBottomOf="@id/amount_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/swap_button"
                    app:layout_constraintHorizontal_weight="1"/>

                <ImageButton
                    android:id="@+id/swap_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_swap_horiz"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/swap_currencies"
                    app:layout_constraintTop_toTopOf="@id/from_currency_spinner"
                    app:layout_constraintBottom_toBottomOf="@id/from_currency_spinner"
                    app:layout_constraintStart_toEndOf="@id/from_currency_spinner"
                    app:layout_constraintEnd_toStartOf="@id/to_currency_spinner" />

                <Spinner
                    android:id="@+id/to_currency_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/spinner_background"
                    android:padding="12dp"
                    app:layout_constraintTop_toTopOf="@id/from_currency_spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/swap_button"
                    app:layout_constraintHorizontal_weight="1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="1,000.50"
            app:layout_constraintTop_toBottomOf="@id/converter_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/to_currency_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="YER"
            app:layout_constraintStart_toEndOf="@id/result_text_view"
            app:layout_constraintBaseline_toBaselineOf="@id/result_text_view" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/history_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history"
            app:icon="@drawable/ic_history"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/history_button"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
